[*] IOHelper.java: инспекция кода.